--- a/aula01html/style.css
+++ b/aula01html/style.css
@@ -1,4 +1,17 @@
-.texto-cor{
-    color: blue;
-    background-color: grey;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+header{
+    background-color: black;
+}
+.container{
+    display: flex;
+    width: 80%;
+    color: white;
+    margin: 0 auto;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
 }
